# electrolyte_ailab

./: .gitignore  environment.yml
eletrolyte_lab/: .gitattributes
eletrolyte_lab/SPARK-master-20250803/: 2005.csv  2005.json  2006.csv  2006.json  2007.csv  2007.json  2008.csv  2008.json  README.md  check_pdf.ipynb  errors.txt  main.py  modelchat.py  output_data_2009.json  pdfretrieve.py  post_process.ipynb  processed_data.txt  requirements.txt  save_json_to_csv.py  semanticsearch.py  textindex.py  技术介绍.md
eletrolyte_lab/TextMining_code/: AGENTS.md  KG_info_miner.py  main_GUI.py  ontology_csv_container.py  ontology_v2.json  process_miner_by_patch.py
eletrolyte_lab/TextMining_through_Own_Chain_of_Thoughts/: README.txt  entities_embedder.py  (+7 more)
eletrolyte_lab/molecular_generation_code/surge/: CMakeLists.txt
eletrolyte_lab/molecular_generation_code/surge/surge_cmake_unchanged/: CMakeLists.txt
eletrolyte_lab/molecular_generation_code/surge/surge_cmake_unchanged/cmdline_python/: info  read_smiles.py  read_smiles2.py  read_smilescopy.py  test_GDB.py  test_formular_gen_COH.py  test_surge.py
eletrolyte_lab/molecular_generation_code/surge/surge_cmake_unchanged/libnauty/: NRswitchg  addedgeg  addptg  amtog  ancestorg  assembleg  biplabg  catg  complg  config.status  converseg  copyg  countg  cubhamg  deledgeg  delptg  dimacs2g  directg  dreadnaut  dretodot  dretog  edgetransg  genbg  genbgL  geng  gengL  genposetg  genquarticg  genrang  genspecialg  gentourng  gentreeg  hamheuristic  labelg  linegraphg  listg  makefile  multig  nbrhoodg  newedgeg  (+10 more)
eletrolyte_lab/molecular_generation_code/surge/usesurge-main/: README.md
eletrolyte_lab/molecular_generation_code/surge/usesurge-main/cmdline_python_gyc/: log  read_smilescopy.py  stderr.77318  stderr.77320  stderr.77321  stdout.77320  stdout.77321  test_GDB.py
eletrolyte_lab/molecular_generation_code/surge/usesurge-main/src/: CMakeLists.txt  planarity.c  surge.c
eletrolyte_lab/molecular_generation_code/surge/usesurge/cmdline_python_gyc/: bs_test_surge.sh  read_smiles.py  read_smiles2.py  stderr.77316  test.smi  test_GDB.py  test_formular_gen_COH.py  test_surge.py
eletrolyte_lab/molecular_generation_code/surge/usesurge/src/: geng.c  plugin.c
fine-tune/: filter_json.py  llms-ft-benchmark-evaluation.py
finetune/: check_token_dist.py
finetune-rag-agent/: CPT.py
(+12290 files in other folders)
